 4.48 => 4.49
2023-07-09

Balance :
 - Decrease BuidPower for all T3 Air Rez (1500=>1000)
 - Increase cost for all T3  Geo except for Core
 - Add Limit Restriction Units (200) to all Ak Pewee Class
 - T1 Air Bomber : Balance damage between all faction. Need 5 bombers to destroy a Geo. Increase damage for arm / core to keep destroy this target in example.
 - Increase buildtime for all commander. Goal is to add more time to capture them.
 - All Gok Quadrupod except crab arty : Delete All-Terrain Feature
 - Some adjustement for all pewee class. Cost fixed at 50M min. Talon Sniper cost 85M=>45M and Energy cost 1400 => 2500. All units <50Metal are targeted by Juno

 Fix :
 - Mines Tech2+ are buildable

Improvment :
- Add T4 Lab and T4 Units for Rumad

4.47 => 4.48
2023-05-27

Balance :
 - All T1 Plasma Tower : Increase damage by 36% : 80dmg/s => 125dmg/s (Not enough used)
 - All T2 Plasma Tower : Increase damage by 20% : 160dmg/s => 200dmg/s
 - Orchid was already to 200dmg/s. So, decreasez energy & metal cost
 - Rumad Triton T1 at 175dmg/s but range at 1000
 - Mobile Tachyon Arm & Talon : Decrease HP by 20%
 - Fury : decreasse HP 245K => 205. Increase Main weapon range 600=>950. Decrease Damage 1.6K/S => 1.2K/S
 - Krog : Increase Range for Main Weapon 590=>700. Decrease HP -10K
 - Orca : Increase Range for Main Weapon 575=>650. Decrease HP -10K
 - Mercenary : Decrease LOS

Improvment :
- Razorback : BeamLaser comes back.
- T2 Core Sniper : Decrease Model size
- T2 Core Sumo : Increase Model size


 4.46 => 4.47
2023-04-23

Balance :
 - AntiNuke T2/T3 becomes AntiMissiles. They can now intercept Tac Missiles. (If you have good range, you can try to saturate AntiNuke)
 - Bombers damage vs commander are increase by 100% (total 50% for defaut damage vs 25% before)
 - Uniformize damage modifier for fix armored units : 0.10=>0.20
 - Obelisk Shield Talon : Reduce metalcost 4.6K => 3.6K
 - All Mobile Jam : Increase energycost ~2KE=>6KE. Decrease energy/s for jamming 100=>50
