@@ -129,7 +129,7 @@ return {
 				stages = 20,
 				turret = true,
 				weapontype = "Cannon",
-				weaponvelocity = 350,
+				weaponvelocity = 500,
 				damage = {
 					default = 360,
 					subs = 5,
